name:                servant-ede
version:             0.5.1
synopsis:            Combinators for rendering EDE templates in servant web applications
description:
  Combinators for rendering EDE templates in servant web applications.
  .
  Documentation and examples available at "Servant.EDE".
homepage:            http://github.com/alpmestan/servant-ede
bug-reports:         http://github.com/alpmestan/servant-ede/issues
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2015 Alp Mestanogullari
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type: git
  location: git://github.com/alpmestan/servant-ede.git

library
  exposed-modules:
      Servant.EDE
    , Servant.EDE.Internal
    , Servant.EDE.Internal.Reify
    , Servant.EDE.Internal.ToObject
    , Servant.EDE.Internal.Validate

  build-depends:
      aeson
    , base
    , bytestring
    , filepath
    , ede
    , either
    , http-media
    , http-types
    , semigroups
    , servant
    , text
    , transformers
    , unordered-containers
    , vector
    , xss-sanitize

  ghc-options:         -O2 -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010


executable servant-ede-example
  main-is: example.hs
  hs-source-dirs: example
  default-language: Haskell2010
  build-depends:
      base
    , ede
    , http-media
    , servant-server
    , servant-ede
    , text
    , unordered-containers
    , warp
